--- a/components/ProfileNavigation/ProfileNavigation.module.css
+++ b/components/ProfileNavigation/ProfileNavigation.module.css
@@ -5,7 +5,7 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  gap: 32px;
+  gap: 38px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -13,8 +13,8 @@
 
 .link {
   display: inline-block;
-  padding-bottom: 8px;
-  border-bottom: 2px solid transparent;
+  padding-bottom: 4px;
+  border-bottom: 1px solid transparent;
   color: #000;
   font-family: var(--font-family), sans-serif;
   font-size: 18px;
@@ -29,14 +29,6 @@
 
 @media screen and (min-width: 768px) {
   .link {
-    font-size: 20px;
-    padding-bottom: 12px;
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .link {
-    font-size: 24px;
-    padding-bottom: 16px;
+    font-size: 12px;
   }
 }
